<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp"
        android:textAlignment="gravity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:textAlignment="gravity">

            <TextView
                android:id="@+id/task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/task_name"
                android:textColor="#D0BCFF"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="start"
                android:orientation="horizontal"
                android:textAlignment="gravity">

                <TextView
                    android:id="@+id/task_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".25"
                    android:text="@string/category"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <Space
                    android:layout_width="10sp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/task_datetime"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".75"
                    android:gravity="start"
                    android:text="@string/datetime"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5sp" />

            <TextView
                android:id="@+id/task_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/desc_field"
                android:textColor="#D0BCFF"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/is_done"
            android:src="@drawable/ic_hourglass_top_24"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

        <ImageView
            android:id="@+id/is_attached"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

        <Space
            android:layout_width="10sp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/edit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/edit"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>